# vimrc

./: .gitignore  LICENSE  README.md  _vimrc
vimfiles/: .netrwhist
vimfiles/bundle/vim-python/submodules/pytoolconfig/: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
vimfiles/bundle/vim-python/submodules/pytoolconfig/.github/workflows/: python-publish.yml  tox.yml
vimfiles/bundle/vim-python/submodules/pytoolconfig/docs/: api.rst  command_line.rst  conf.py  documentation.rst  global_configuration.rst  index.rst  pydantic.rst  universal_config.rst
vimfiles/bundle/vim-python/submodules/pytoolconfig/tests/: conftest.py  test_config.py  test_documentation.py  test_pytoolconfig.py  test_utils.py
vimfiles/bundle/vim-python/submodules/pytoolconfig/tests/configfiles/: pyproject.toml  pytool.toml  setup.cfg
vimfiles/colors/: herald.vim  molokai.vim
vimfiles/dict/: Dockerfile.txt  c.txt  cpp-boost.txt  cpp-stdlib.txt  cpp.txt  css.txt  docker-compose.txt  elixir.txt  go.txt  html.txt  java.txt  javascript.txt  love2d.txt  lua.txt  mysql.txt  node.txt  perl.txt  php.txt  python.txt  ruby.txt  rust.txt
vimfiles/snippets/: 2  _.snippets  apache.snippets  blade.snippets  blaze.snippets  clojure.snippets  coffee.snippets  company_5399.snippets  company_cx.snippets  company_guobi.snippets  cpp.snippets  cs.snippets  css.snippets  d.snippets  dart.snippets  eelixir.snippets  elixir.snippets  erlang.snippets  eruby.snippets  fsharp.snippets  go.snippets  gohtmltmpl.snippets  groovy.snippets  gtk.snippets  haskell.snippets  html.snippets  htmldjango.snippets  io.snippets  jade.snippets  java.snippets  javascript.snippets  js_angular.snippets  js_vue.snippets  js_wxapp.snippets  jst.snippets  (+42 more)
(+1895 files in other folders)
